--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0",
+    "express-x-hub": "^1.0.4",
     "flux": "^2.1.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
